--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,13 @@
             android:enabled="true"
             android:exported="true">
         </service>
+
+        <service
+            android:name=".BinderPoolService"
+            android:enabled="true"
+            android:exported="true">
+        </service>
+
     </application>
 
 </manifest>
